@@ -1,11 +1,13 @@
 package mod.azure.doom.entity.tierfodder;
 
+import java.util.EnumSet;
 import java.util.Random;
 
 import javax.annotation.Nullable;
 
 import mod.azure.doom.entity.DemonEntity;
 import mod.azure.doom.entity.ai.goal.DemonAttackGoal;
+import mod.azure.doom.entity.ai.goal.RandomFlyConvergeOnTargetGoal;
 import mod.azure.doom.entity.ai.goal.RangedStrafeAttackGoal;
 import mod.azure.doom.entity.attack.FireballAttack;
 import mod.azure.doom.util.config.Config;
@@ -16,18 +18,21 @@ import net.minecraft.block.BlockState;
 import net.minecraft.entity.CreatureAttribute;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.ILivingEntityData;
+import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.MobEntity;
+import net.minecraft.entity.MoverType;
 import net.minecraft.entity.SpawnReason;
 import net.minecraft.entity.ai.attributes.AttributeModifierMap;
 import net.minecraft.entity.ai.attributes.Attributes;
-import net.minecraft.entity.ai.controller.FlyingMovementController;
+import net.minecraft.entity.ai.controller.MovementController;
+import net.minecraft.entity.ai.goal.Goal;
 import net.minecraft.entity.ai.goal.HurtByTargetGoal;
 import net.minecraft.entity.ai.goal.LookAtGoal;
 import net.minecraft.entity.ai.goal.LookRandomlyGoal;
 import net.minecraft.entity.ai.goal.NearestAttackableTargetGoal;
 import net.minecraft.entity.ai.goal.WaterAvoidingRandomWalkingGoal;
 import net.minecraft.entity.merchant.villager.AbstractVillagerEntity;
-import net.minecraft.entity.passive.IFlyingAnimal;
+import net.minecraft.entity.monster.IMob;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.nbt.CompoundNBT;
 import net.minecraft.network.IPacket;
@@ -39,7 +44,10 @@ import net.minecraft.pathfinding.PathNavigator;
 import net.minecraft.util.DamageSource;
 import net.minecraft.util.SoundEvent;
 import net.minecraft.util.SoundEvents;
+import net.minecraft.util.math.AxisAlignedBB;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.math.vector.Vector3d;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.IServerWorld;
 import net.minecraft.world.IWorld;
@@ -55,7 +63,7 @@ import software.bernie.geckolib3.core.event.predicate.AnimationEvent;
 import software.bernie.geckolib3.core.manager.AnimationData;
 import software.bernie.geckolib3.core.manager.AnimationFactory;
 
-public class GargoyleEntity extends DemonEntity implements IAnimatable, IFlyingAnimal {
+public class GargoyleEntity extends DemonEntity implements IAnimatable, IMob {
 
 	private static final DataParameter<Boolean> ATTACKING = EntityDataManager.defineId(GargoyleEntity.class,
 			DataSerializers.BOOLEAN);
@@ -64,7 +72,7 @@ public class GargoyleEntity extends DemonEntity implements IAnimatable, IFlyingA
 
 	public GargoyleEntity(EntityType<GargoyleEntity> entityType, World worldIn) {
 		super(entityType, worldIn);
-		this.moveControl = new FlyingMovementController(this, 7200, true);
+		this.moveControl = new GargoyleEntity.MoveHelperController(this);
 	}
 
 	private AnimationFactory factory = new AnimationFactory(this);
@@ -78,12 +86,12 @@ public class GargoyleEntity extends DemonEntity implements IAnimatable, IFlyingA
 		if (this.entityData.get(ATTACKING) && !(this.dead || this.getHealth() < 0.01 || this.isDeadOrDying())) {
 			event.getController().setAnimation(new AnimationBuilder().addAnimation("attacking", false));
 			return PlayState.CONTINUE;
-		}
+		} 
 		if ((this.dead || this.getHealth() < 0.01 || this.isDeadOrDying())) {
 			event.getController().setAnimation(new AnimationBuilder().addAnimation("death", false));
 			return PlayState.CONTINUE;
 		}
-		event.getController().setAnimation(new AnimationBuilder().addAnimation("idle", true));
+		event.getController().setAnimation(new AnimationBuilder().addAnimation("flying", true));
 		return PlayState.CONTINUE;
 	}
 
@@ -147,6 +155,8 @@ public class GargoyleEntity extends DemonEntity implements IAnimatable, IFlyingA
 						new FireballAttack(this, false).setProjectileOriginOffset(0.8, 0.8, 0.8).setDamage(5)
 								.setSound(SoundEvents.BLAZE_SHOOT, 1.0F, 1.4F + this.getRandom().nextFloat() * 0.35F),
 						1.0D, 50, 30, 15, 15F).setMultiShot(3, 3));
+		this.goalSelector.addGoal(7, new GargoyleEntity.LookAroundGoal(this));
+		this.goalSelector.addGoal(5, new RandomFlyConvergeOnTargetGoal(this, 2, 15, 0.5));
 		this.goalSelector.addGoal(4, new DemonAttackGoal(this, 1.0D, false));
 		this.targetSelector.addGoal(2, new NearestAttackableTargetGoal<>(this, PlayerEntity.class, true));
 		this.targetSelector.addGoal(3, new NearestAttackableTargetGoal<>(this, AbstractVillagerEntity.class, false));
@@ -166,6 +176,120 @@ public class GargoyleEntity extends DemonEntity implements IAnimatable, IFlyingA
 	}
 
 	protected void checkFallDamage(double y, boolean onGroundIn, BlockState state, BlockPos pos) {
+	}
+
+	public void travel(Vector3d travelVector) {
+		if (this.isInWater()) {
+			this.moveRelative(0.02F, travelVector);
+			this.move(MoverType.SELF, this.getDeltaMovement());
+			this.setDeltaMovement(this.getDeltaMovement().scale((double) 0.8F));
+		} else if (this.isInLava()) {
+			this.moveRelative(0.02F, travelVector);
+			this.move(MoverType.SELF, this.getDeltaMovement());
+			this.setDeltaMovement(this.getDeltaMovement().scale(0.5D));
+		} else {
+			BlockPos ground = new BlockPos(this.getX(), this.getY() - 1.0D, this.getZ());
+			float f = 0.91F;
+			if (this.onGround) {
+				f = this.level.getBlockState(ground).getSlipperiness(this.level, ground, this) * 0.91F;
+			}
+
+			float f1 = 0.16277137F / (f * f * f);
+			f = 0.91F;
+			if (this.onGround) {
+				f = this.level.getBlockState(ground).getSlipperiness(this.level, ground, this) * 0.91F;
+			}
+
+			this.moveRelative(this.onGround ? 0.1F * f1 : 0.02F, travelVector);
+			this.move(MoverType.SELF, this.getDeltaMovement());
+			this.setDeltaMovement(this.getDeltaMovement().scale((double) f));
+		}
+
+		this.calculateEntityAnimation(this, false);
+	}
+
+	/**
+	 * Returns true if this entity should move as if it were on a ladder (either
+	 * because it's actually on a ladder, or for AI reasons)
+	 */
+	public boolean onClimbable() {
+		return false;
+	}
+
+	static class LookAroundGoal extends Goal {
+		private final GargoyleEntity parentEntity;
+
+		public LookAroundGoal(GargoyleEntity ghast) {
+			this.parentEntity = ghast;
+			this.setFlags(EnumSet.of(Goal.Flag.LOOK));
+		}
+
+		public boolean canUse() {
+			return true;
+		}
+
+		public void tick() {
+			if (this.parentEntity.getTarget() == null) {
+				Vector3d vec3d = this.parentEntity.getDeltaMovement();
+				this.parentEntity.yRot = -((float) MathHelper.atan2(vec3d.x, vec3d.z)) * (180F / (float) Math.PI);
+				this.parentEntity.yBodyRot = this.parentEntity.yRot;
+			} else {
+				LivingEntity livingentity = this.parentEntity.getTarget();
+				if (livingentity.distanceToSqr(this.parentEntity) < 4096.0D) {
+					double d1 = livingentity.getX() - this.parentEntity.getX();
+					double d2 = livingentity.getZ() - this.parentEntity.getZ();
+					this.parentEntity.yRot = -((float) MathHelper.atan2(d1, d2)) * (180F / (float) Math.PI);
+					this.parentEntity.yBodyRot = this.parentEntity.yRot;
+				}
+			}
+
+		}
+	}
+
+	static class MoveHelperController extends MovementController {
+		private final GargoyleEntity parentEntity;
+		private int courseChangeCooldown;
+
+		public MoveHelperController(GargoyleEntity ghast) {
+			super(ghast);
+			this.parentEntity = ghast;
+		}
+
+		public void tick() {
+			if (this.operation == MovementController.Action.MOVE_TO) {
+				if (this.courseChangeCooldown-- <= 0) {
+					this.courseChangeCooldown += this.parentEntity.getRandom().nextInt(5) + 2;
+					Vector3d vector3d = new Vector3d(this.wantedX - this.parentEntity.getX(),
+							this.wantedY - this.parentEntity.getY(), this.wantedZ - this.parentEntity.getZ());
+					double d0 = vector3d.length();
+					vector3d = vector3d.normalize();
+					if (this.canReach(vector3d, MathHelper.ceil(d0))) {
+						this.parentEntity
+								.setDeltaMovement(this.parentEntity.getDeltaMovement().add(vector3d.scale(0.1D))); // TODO
+						// test
+						// fly
+						// speed
+						// here
+					} else {
+						this.operation = MovementController.Action.WAIT;
+					}
+				}
+
+			}
+		}
+
+		private boolean canReach(Vector3d p_220673_1_, int p_220673_2_) {
+			AxisAlignedBB axisalignedbb = this.parentEntity.getBoundingBox();
+
+			for (int i = 1; i < p_220673_2_; ++i) {
+				axisalignedbb = axisalignedbb.move(p_220673_1_);
+				if (!this.parentEntity.level.noCollision(this.parentEntity, axisalignedbb)) {
+					return false;
+				}
+			}
+
+			return true;
+		}
 	}
 
 	public static AttributeModifierMap.MutableAttribute createAttributes() {
